# docx_builder

./: .dev-quality.yaml  .gitignore  .pre-commit-config.yaml  .sourcemapignore  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pyproject.toml
.claude/agents/: docx-builder-architect.md  docx-builder-implementer.md
docs/: styles-reference.md
docx_builder/: builder.py  cli.py  elements.py  export.py  figure.py  pagination.py  renderer.py  report.py  skill_installer.py  styles.py  summary.py  table.py  toc_links.py
docx_builder/cli/: __init__.py  _build.py  _export.py  _init.py  _install.py  _shared.py
docx_builder/scripts/: docx_to_pdf.jxa
docx_builder/skill/: SKILL.md
docx_builder/templates/: content.skeleton.yaml  default_styles.yaml
tests/: test_build.py  test_cli.py  test_elements.py  test_export.py  test_figure.py  test_pagination.py  test_renderer.py  test_report.py  test_skill_installer.py  test_styles.py  test_summary.py  test_table.py  test_toc_links.py
