[project]
name = "docx_builder"
version = "0.1.0"
description = "Generate DOCX reports from a content.yaml in any working directory."
requires-python = ">=3.11"
dependencies = [
    "python-docx",
    "pyyaml",
]

[project.scripts]
docx_builder = "docx_builder.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["docx_builder"]

[tool.hatch.build.targets.sdist]
include = ["docx_builder", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RET", "C90", "S", "N", "PLR"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S603", "S607", "S108", "PLR2004", "SLF001"]
"docx_builder/figure.py" = ["PLR0913"]
"scripts/**" = ["S", "PLR", "C901", "I001"]

[tool.mypy]
strict = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "types-pyyaml>=6.0.12.20260408",
]
